Audio compression finished